--- a/public/index.html
+++ b/public/index.html
@@ -252,8 +252,8 @@
     <div id="profile">
 
       
-      <div class="portrait" style="background-image: url('/img/my_portrait.png');"></div>
-      <meta itemprop="image" content="/img/my_portrait.png">
+      <div class="portrait" style="background-image: url('/img/water_drop.jgp');"></div>
+      <meta itemprop="image" content="/img/water_drop.jgp">
       
 
       <div class="portrait-title">
