--- a/public/index.html
+++ b/public/index.html
@@ -252,8 +252,8 @@
     <div id="profile">
 
       
-      <div class="portrait" style="background-image: url('https://www.thomasmock.netlify.com/img//my_portrait.png');"></div>
-      <meta itemprop="image" content="https://www.thomasmock.netlify.com/img//my_portrait.png">
+      <div class="portrait" style="background-image: url('https://www.thomasmock.netlify.com/img/my_portrait.png');"></div>
+      <meta itemprop="image" content="https://www.thomasmock.netlify.com/img/my_portrait.png">
       
 
       <div class="portrait-title">
