upload TidyTuesday post

--- a/public/404.html
+++ b/public/404.html
@@ -68,8 +68,8 @@
   
 
   
-  <link rel="alternate" href="https://thomasmock.netlify.com/index.xml" type="application/rss+xml" title="Thomas Mock">
-  <link rel="feed" href="https://thomasmock.netlify.com/index.xml" type="application/rss+xml" title="Thomas Mock">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Thomas Mock">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Thomas Mock">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -237,11 +237,15 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="https://thomasmock.netlify.com/post/functional-programming-in-r-with-purrr/">Functional programming in R with Purrr</a></li>
+    <li><a href="/post/tidytuesday-a-weekly-social-data-project-in-r/">TidyTuesday - A weekly social data project in R</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://thomasmock.netlify.com/post/a-gentle-guide-to-tidy-statistics-in-r/">A gentle guide to Tidy statistics in R</a></li>
+    <li><a href="/post/functional-programming-in-r-with-purrr/">Functional programming in R with Purrr</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/post/a-gentle-guide-to-tidy-statistics-in-r/">A gentle guide to Tidy statistics in R</a></li>
   </ul>
   
   
@@ -257,7 +261,7 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="https://thomasmock.netlify.com/project/customer-churn/">Customer Churn - EDA</a></li>
+    <li><a href="/project/customer-churn/">Customer Churn - EDA</a></li>
   </ul>
   
   
