--- a/public/publication_types/index.html
+++ b/public/publication_types/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="PhD Candidate in Neuroscience">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://thomasmock.netlify.com/publication_types/">
+  <link rel="alternate" hreflang="en-us" href="/publication_types/">
 
   
 
@@ -70,15 +70,15 @@
   
 
   
-  <link rel="alternate" href="https://thomasmock.netlify.com/index.xml" type="application/rss+xml" title="Thomas Mock">
-  <link rel="feed" href="https://thomasmock.netlify.com/index.xml" type="application/rss+xml" title="Thomas Mock">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Thomas Mock">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Thomas Mock">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://thomasmock.netlify.com/publication_types/">
+  <link rel="canonical" href="/publication_types/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -86,7 +86,7 @@
   <meta property="twitter:creator" content="@thomas_mock">
   
   <meta property="og:site_name" content="Thomas Mock">
-  <meta property="og:url" content="https://thomasmock.netlify.com/publication_types/">
+  <meta property="og:url" content="/publication_types/">
   <meta property="og:title" content="Publication_types | Thomas Mock">
   <meta property="og:description" content="PhD Candidate in Neuroscience">
   <meta property="og:locale" content="en-us">
